--- a/index.html
+++ b/index.html
@@ -34,30 +34,36 @@
 </head>
 
 <body>
+    <div class="nav">
+    </div>
+
+    <div class="content"></div>
+
     <script>
     var cats = [{
-        'name': 'alonzo',
+        'name': 'Alonzo',
         'alt': 'the cat Alonzo sleeps on a dining table'
     }, {
-        'name': 'electra',
+        'name': 'Electra',
         'alt': 'the cat Electra on duty near the gate'
     }, {
-        'name': 'endow',
+        'name': 'Endow',
         'alt': 'the cat Endow eats with two other cats'
     }, {
-        'name': 'jemima',
+        'name': 'Jemima',
         'alt': 'the cat Endow stares right into another cat'
     }, {
-        'name': 'jessie',
+        'name': 'Jessie',
         'alt': 'the cat Jessie on bookshelf'
     }];
 
     cats.HTMLcatImg = 'img src="images/cat-720.jpg" srcset="images/cat-360.jpg 360w, images/cat-720.jpg 720w, images/cat-1440.jpg 1440w, images/cat-2880.jpg 2880w, images/cat-7360.jpg 7360w" sizes="(max-device-width: 480px) 90vw, 40vw"';
 
     for (var i = 0; i < cats.length; i++) {
-        var formattedHTMLcatImg = cats.HTMLcatImg.replace(/cat/g, cats[i].name) + ' alt="' + cats[i].alt + '" ' +  'id="cat-img"';
-        var formattedHTMLcatDiv = '<div class="cat"><h1 id = "count-display" > 0 </h1><' + formattedHTMLcatImg +
-            '></div>';
+        var formattedHTMLcatImg = '<' + cats.HTMLcatImg.replace(/cat/g, cats[i].name.toLowerCase()) + ' alt="' + cats[i].alt + '" ' +  'id="cat-img"' + '>';
+        var HTMLcatName = '<h1>' + cats[i].name + '</h1>';
+        var formattedHTMLcatDiv = '<div class="cat"><h1 id = "count-display" > 0 </h1>' + HTMLcatName + formattedHTMLcatImg +
+            '</div>';
         $('body').append(formattedHTMLcatDiv);
     }
 
@@ -72,5 +78,4 @@
     });
     </script>
 </body>
-
 </html>
